// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareDialog should not render the QR code if disabled 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-describedby="mx_Dialog_content"
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ShareDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Share Room
      </h1>
    </div>
    <div
      class="mx_ShareDialog_content"
    >
      <div
        class="mx_ShareDialog_top"
      >
        <span>
          https://matrix.to/#/!1:example.org
        </span>
      </div>
      <button
        class="_button_vczzf_8 _has-icon_vczzf_57"
        data-kind="primary"
        data-size="lg"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19.071q-1.467 1.467-3.536 1.467-2.067 0-3.535-1.467t-1.467-3.535q0-2.07 1.467-3.536L7.05 9.879q.3-.3.707-.3t.707.3.301.707-.3.707l-2.122 2.121a2.9 2.9 0 0 0-.884 2.122q0 1.237.884 2.12.884.885 2.121.885t2.122-.884l2.121-2.121q.3-.3.707-.3t.707.3.3.707q0 .405-.3.707zm-1.414-4.243q-.3.3-.707.301a.97.97 0 0 1-.707-.3q-.3-.3-.301-.708 0-.405.3-.707l4.243-4.242q.3-.3.707-.3t.707.3.3.707-.3.707zm6.364-.707q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.301-.707 0-.405.3-.707l2.122-2.121q.884-.885.884-2.121 0-1.238-.884-2.122a2.9 2.9 0 0 0-2.121-.884q-1.237 0-2.122.884l-2.121 2.122q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.3-.708 0-.405.3-.707L12 4.93q1.467-1.467 3.536-1.467t3.535 1.467 1.467 3.536T19.071 12z"
          />
        </svg>
        Copy link
      </button>
      <div
        class="mx_ShareDialog_social"
      >
        <a
          href="https://www.facebook.com/sharer/sharer.php?u=https://matrix.to/#/!1:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="Facebook"
        >
          <img
            alt="Facebook"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://twitter.com/home?status=https://matrix.to/#/!1:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="Twitter"
        >
          <img
            alt="Twitter"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://www.linkedin.com/shareArticle?mini=true&url=https://matrix.to/#/!1:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="LinkedIn"
        >
          <img
            alt="LinkedIn"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://www.reddit.com/submit?url=https://matrix.to/#/!1:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="Reddit"
        >
          <img
            alt="Reddit"
            src="image-file-stub"
          />
        </a>
        <a
          href="mailto:?body=https://matrix.to/#/!1:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="email"
        >
          <img
            alt="email"
            src="image-file-stub"
          />
        </a>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`ShareDialog should not render the socials if disabled 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-describedby="mx_Dialog_content"
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ShareDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Share Room
      </h1>
    </div>
    <div
      class="mx_ShareDialog_content"
    >
      <div
        class="mx_ShareDialog_top"
      >
        <div
          class="mx_QRCode"
        >
          <div
            class="mx_Spinner"
          >
            <div
              aria-label="Loading…"
              class="mx_Spinner_icon"
              data-testid="spinner"
              role="progressbar"
              style="width: 32px; height: 32px;"
            />
          </div>
        </div>
        <span>
          https://matrix.to/#/!1:example.org
        </span>
      </div>
      <button
        class="_button_vczzf_8 _has-icon_vczzf_57"
        data-kind="primary"
        data-size="lg"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19.071q-1.467 1.467-3.536 1.467-2.067 0-3.535-1.467t-1.467-3.535q0-2.07 1.467-3.536L7.05 9.879q.3-.3.707-.3t.707.3.301.707-.3.707l-2.122 2.121a2.9 2.9 0 0 0-.884 2.122q0 1.237.884 2.12.884.885 2.121.885t2.122-.884l2.121-2.121q.3-.3.707-.3t.707.3.3.707q0 .405-.3.707zm-1.414-4.243q-.3.3-.707.301a.97.97 0 0 1-.707-.3q-.3-.3-.301-.708 0-.405.3-.707l4.243-4.242q.3-.3.707-.3t.707.3.3.707-.3.707zm6.364-.707q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.301-.707 0-.405.3-.707l2.122-2.121q.884-.885.884-2.121 0-1.238-.884-2.122a2.9 2.9 0 0 0-2.121-.884q-1.237 0-2.122.884l-2.121 2.122q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.3-.708 0-.405.3-.707L12 4.93q1.467-1.467 3.536-1.467t3.535 1.467 1.467 3.536T19.071 12z"
          />
        </svg>
        Copy link
      </button>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`ShareDialog should render a share dialog for a matrix event 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-describedby="mx_Dialog_content"
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ShareDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Share Room Message
      </h1>
    </div>
    <div
      class="mx_ShareDialog_content"
    >
      <div
        class="mx_ShareDialog_top"
      >
        <div
          class="mx_QRCode"
        >
          <div
            class="mx_Spinner"
          >
            <div
              aria-label="Loading…"
              class="mx_Spinner_icon"
              data-testid="spinner"
              role="progressbar"
              style="width: 32px; height: 32px;"
            />
          </div>
        </div>
        <span>
          https://matrix.to/#/!1:example.org/!eventId
        </span>
      </div>
      <label>
        <div
          class="_container_1hel1_10"
        >
          <input
            checked=""
            class="_input_1hel1_18"
            type="checkbox"
          />
          <div
            class="_ui_1hel1_19"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
              />
            </svg>
          </div>
        </div>
        Link to selected message
      </label>
      <button
        class="_button_vczzf_8 _has-icon_vczzf_57"
        data-kind="primary"
        data-size="lg"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19.071q-1.467 1.467-3.536 1.467-2.067 0-3.535-1.467t-1.467-3.535q0-2.07 1.467-3.536L7.05 9.879q.3-.3.707-.3t.707.3.301.707-.3.707l-2.122 2.121a2.9 2.9 0 0 0-.884 2.122q0 1.237.884 2.12.884.885 2.121.885t2.122-.884l2.121-2.121q.3-.3.707-.3t.707.3.3.707q0 .405-.3.707zm-1.414-4.243q-.3.3-.707.301a.97.97 0 0 1-.707-.3q-.3-.3-.301-.708 0-.405.3-.707l4.243-4.242q.3-.3.707-.3t.707.3.3.707-.3.707zm6.364-.707q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.301-.707 0-.405.3-.707l2.122-2.121q.884-.885.884-2.121 0-1.238-.884-2.122a2.9 2.9 0 0 0-2.121-.884q-1.237 0-2.122.884l-2.121 2.122q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.3-.708 0-.405.3-.707L12 4.93q1.467-1.467 3.536-1.467t3.535 1.467 1.467 3.536T19.071 12z"
          />
        </svg>
        Copy link
      </button>
      <div
        class="mx_ShareDialog_social"
      >
        <a
          href="https://www.facebook.com/sharer/sharer.php?u=https://matrix.to/#/!1:example.org/!eventId"
          rel="noreferrer noopener"
          target="_blank"
          title="Facebook"
        >
          <img
            alt="Facebook"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://twitter.com/home?status=https://matrix.to/#/!1:example.org/!eventId"
          rel="noreferrer noopener"
          target="_blank"
          title="Twitter"
        >
          <img
            alt="Twitter"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://www.linkedin.com/shareArticle?mini=true&url=https://matrix.to/#/!1:example.org/!eventId"
          rel="noreferrer noopener"
          target="_blank"
          title="LinkedIn"
        >
          <img
            alt="LinkedIn"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://www.reddit.com/submit?url=https://matrix.to/#/!1:example.org/!eventId"
          rel="noreferrer noopener"
          target="_blank"
          title="Reddit"
        >
          <img
            alt="Reddit"
            src="image-file-stub"
          />
        </a>
        <a
          href="mailto:?body=https://matrix.to/#/!1:example.org/!eventId"
          rel="noreferrer noopener"
          target="_blank"
          title="email"
        >
          <img
            alt="email"
            src="image-file-stub"
          />
        </a>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`ShareDialog should render a share dialog for a room 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-describedby="mx_Dialog_content"
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ShareDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Share Room
      </h1>
    </div>
    <div
      class="mx_ShareDialog_content"
    >
      <div
        class="mx_ShareDialog_top"
      >
        <div
          class="mx_QRCode"
        >
          <div
            class="mx_Spinner"
          >
            <div
              aria-label="Loading…"
              class="mx_Spinner_icon"
              data-testid="spinner"
              role="progressbar"
              style="width: 32px; height: 32px;"
            />
          </div>
        </div>
        <span>
          https://matrix.to/#/!1:example.org
        </span>
      </div>
      <label>
        <div
          class="_container_1hel1_10"
        >
          <input
            class="_input_1hel1_18"
            type="checkbox"
          />
          <div
            class="_ui_1hel1_19"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
              />
            </svg>
          </div>
        </div>
        Link to most recent message
      </label>
      <button
        class="_button_vczzf_8 _has-icon_vczzf_57"
        data-kind="primary"
        data-size="lg"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19.071q-1.467 1.467-3.536 1.467-2.067 0-3.535-1.467t-1.467-3.535q0-2.07 1.467-3.536L7.05 9.879q.3-.3.707-.3t.707.3.301.707-.3.707l-2.122 2.121a2.9 2.9 0 0 0-.884 2.122q0 1.237.884 2.12.884.885 2.121.885t2.122-.884l2.121-2.121q.3-.3.707-.3t.707.3.3.707q0 .405-.3.707zm-1.414-4.243q-.3.3-.707.301a.97.97 0 0 1-.707-.3q-.3-.3-.301-.708 0-.405.3-.707l4.243-4.242q.3-.3.707-.3t.707.3.3.707-.3.707zm6.364-.707q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.301-.707 0-.405.3-.707l2.122-2.121q.884-.885.884-2.121 0-1.238-.884-2.122a2.9 2.9 0 0 0-2.121-.884q-1.237 0-2.122.884l-2.121 2.122q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.3-.708 0-.405.3-.707L12 4.93q1.467-1.467 3.536-1.467t3.535 1.467 1.467 3.536T19.071 12z"
          />
        </svg>
        Copy link
      </button>
      <div
        class="mx_ShareDialog_social"
      >
        <a
          href="https://www.facebook.com/sharer/sharer.php?u=https://matrix.to/#/!1:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="Facebook"
        >
          <img
            alt="Facebook"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://twitter.com/home?status=https://matrix.to/#/!1:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="Twitter"
        >
          <img
            alt="Twitter"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://www.linkedin.com/shareArticle?mini=true&url=https://matrix.to/#/!1:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="LinkedIn"
        >
          <img
            alt="LinkedIn"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://www.reddit.com/submit?url=https://matrix.to/#/!1:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="Reddit"
        >
          <img
            alt="Reddit"
            src="image-file-stub"
          />
        </a>
        <a
          href="mailto:?body=https://matrix.to/#/!1:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="email"
        >
          <img
            alt="email"
            src="image-file-stub"
          />
        </a>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`ShareDialog should render a share dialog for a room member 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-describedby="mx_Dialog_content"
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ShareDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Share User
      </h1>
    </div>
    <div
      class="mx_ShareDialog_content"
    >
      <div
        class="mx_ShareDialog_top"
      >
        <div
          class="mx_QRCode"
        >
          <div
            class="mx_Spinner"
          >
            <div
              aria-label="Loading…"
              class="mx_Spinner_icon"
              data-testid="spinner"
              role="progressbar"
              style="width: 32px; height: 32px;"
            />
          </div>
        </div>
        <span>
          https://matrix.to/#/@alice:example.org
        </span>
      </div>
      <button
        class="_button_vczzf_8 _has-icon_vczzf_57"
        data-kind="primary"
        data-size="lg"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19.071q-1.467 1.467-3.536 1.467-2.067 0-3.535-1.467t-1.467-3.535q0-2.07 1.467-3.536L7.05 9.879q.3-.3.707-.3t.707.3.301.707-.3.707l-2.122 2.121a2.9 2.9 0 0 0-.884 2.122q0 1.237.884 2.12.884.885 2.121.885t2.122-.884l2.121-2.121q.3-.3.707-.3t.707.3.3.707q0 .405-.3.707zm-1.414-4.243q-.3.3-.707.301a.97.97 0 0 1-.707-.3q-.3-.3-.301-.708 0-.405.3-.707l4.243-4.242q.3-.3.707-.3t.707.3.3.707-.3.707zm6.364-.707q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.301-.707 0-.405.3-.707l2.122-2.121q.884-.885.884-2.121 0-1.238-.884-2.122a2.9 2.9 0 0 0-2.121-.884q-1.237 0-2.122.884l-2.121 2.122q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.3-.708 0-.405.3-.707L12 4.93q1.467-1.467 3.536-1.467t3.535 1.467 1.467 3.536T19.071 12z"
          />
        </svg>
        Copy link
      </button>
      <div
        class="mx_ShareDialog_social"
      >
        <a
          href="https://www.facebook.com/sharer/sharer.php?u=https://matrix.to/#/@alice:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="Facebook"
        >
          <img
            alt="Facebook"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://twitter.com/home?status=https://matrix.to/#/@alice:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="Twitter"
        >
          <img
            alt="Twitter"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://www.linkedin.com/shareArticle?mini=true&url=https://matrix.to/#/@alice:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="LinkedIn"
        >
          <img
            alt="LinkedIn"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://www.reddit.com/submit?url=https://matrix.to/#/@alice:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="Reddit"
        >
          <img
            alt="Reddit"
            src="image-file-stub"
          />
        </a>
        <a
          href="mailto:?body=https://matrix.to/#/@alice:example.org"
          rel="noreferrer noopener"
          target="_blank"
          title="email"
        >
          <img
            alt="email"
            src="image-file-stub"
          />
        </a>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`ShareDialog should render a share dialog for an URL 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-describedby="mx_Dialog_content"
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ShareDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Share Link
      </h1>
    </div>
    <div
      class="mx_ShareDialog_content"
    >
      <div
        class="mx_ShareDialog_top"
      >
        <div
          class="mx_QRCode"
        >
          <div
            class="mx_Spinner"
          >
            <div
              aria-label="Loading…"
              class="mx_Spinner_icon"
              data-testid="spinner"
              role="progressbar"
              style="width: 32px; height: 32px;"
            />
          </div>
        </div>
        <span>
          https://matrix.org/
        </span>
      </div>
      <button
        class="_button_vczzf_8 _has-icon_vczzf_57"
        data-kind="primary"
        data-size="lg"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19.071q-1.467 1.467-3.536 1.467-2.067 0-3.535-1.467t-1.467-3.535q0-2.07 1.467-3.536L7.05 9.879q.3-.3.707-.3t.707.3.301.707-.3.707l-2.122 2.121a2.9 2.9 0 0 0-.884 2.122q0 1.237.884 2.12.884.885 2.121.885t2.122-.884l2.121-2.121q.3-.3.707-.3t.707.3.3.707q0 .405-.3.707zm-1.414-4.243q-.3.3-.707.301a.97.97 0 0 1-.707-.3q-.3-.3-.301-.708 0-.405.3-.707l4.243-4.242q.3-.3.707-.3t.707.3.3.707-.3.707zm6.364-.707q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.301-.707 0-.405.3-.707l2.122-2.121q.884-.885.884-2.121 0-1.238-.884-2.122a2.9 2.9 0 0 0-2.121-.884q-1.237 0-2.122.884l-2.121 2.122q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.3-.708 0-.405.3-.707L12 4.93q1.467-1.467 3.536-1.467t3.535 1.467 1.467 3.536T19.071 12z"
          />
        </svg>
        Copy link
      </button>
      <div
        class="mx_ShareDialog_social"
      >
        <a
          href="https://www.facebook.com/sharer/sharer.php?u=https://matrix.org/"
          rel="noreferrer noopener"
          target="_blank"
          title="Facebook"
        >
          <img
            alt="Facebook"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://twitter.com/home?status=https://matrix.org/"
          rel="noreferrer noopener"
          target="_blank"
          title="Twitter"
        >
          <img
            alt="Twitter"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://www.linkedin.com/shareArticle?mini=true&url=https://matrix.org/"
          rel="noreferrer noopener"
          target="_blank"
          title="LinkedIn"
        >
          <img
            alt="LinkedIn"
            src="image-file-stub"
          />
        </a>
        <a
          href="https://www.reddit.com/submit?url=https://matrix.org/"
          rel="noreferrer noopener"
          target="_blank"
          title="Reddit"
        >
          <img
            alt="Reddit"
            src="image-file-stub"
          />
        </a>
        <a
          href="mailto:?body=https://matrix.org/"
          rel="noreferrer noopener"
          target="_blank"
          title="email"
        >
          <img
            alt="email"
            src="image-file-stub"
          />
        </a>
      </div>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
